Исправления в composer.json

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "extra": {
         "darklyy": {
             "providers": [
-                "Darkeum\\JsonAttributes\\InvisibleReCaptchaServiceProvider"
+                "Darkeum\\InvisibleReCaptcha\\InvisibleReCaptchaServiceProvider"
             ]
         }
     },
