--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     }],
     "require": {
         "php": "^5.6.4 || ^7.0 || ^8.0",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0",
-        "illuminate/view": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/view": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
         "guzzlehttp/guzzle": "^6.2|^7.0",
         "darkeum/darklyy-package-tools": "^1.0.0"
     },
